fix dark model

--- a/src/popup/css/common.css
+++ b/src/popup/css/common.css
@@ -14,3 +14,7 @@
 .dark-mode .no-need-dark {
     filter: invert(1) hue-rotate(180deg) !important;
 }
+
+div[background-img] {
+    filter: invert(1) hue-rotate(180deg) !important;
+}
